data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2377.wast
;; 8. **Test Block with Missing End Instruction**:    - Implement a block without a corresponding end instruction.    - **Reasoning**: This tests the CFG's ability to handle incomplete blocks and the resulting control flow implications.    - **Purpose**: Ensure that the CFG remains valid even with incomplete block instructions.

(assert_invalid
  (module (func $block-missing-end
    (block (result i32) (i32.const 0))
  ))
  "unexpected end of section"
)